@@ -8,7 +8,7 @@ This document provides a detailed breakdown of the plugin's core components, exp
 
 ---
 
-## 1. Language Server Integration (`lsp4ij/` - 505 lines)
+## 1. Language Server Integration (`lsp4ij/`)
 
 LSP4IJ is a LSP and DAP client for JetBrains IDEs.
 
@@ -18,12 +18,14 @@ LSP4IJ Repository: https://github.com/redhat-developer/lsp4ij
 
 ### RellLanguageServerFactory.kt
 
-**Role:** Creates LSP connection providers.
+**Role:** Creates the connection provider for the bundled (newest supported) Rell server.
 
 **Logic:**
 ```kotlin
-override fun createConnectionProvider(project: Project): LanguageServerConnectionProvider {
-    return if (System.getProperty("rell.lsp.useSocket") != null) {
+override fun createConnectionProvider(project: Project): StreamConnectionProvider {
+    val useSocket = System.getProperty("rell.lsp.useSocket", "false").toBoolean()
+
+    return if (useSocket) {
         RellSocketLanguageServer(project)
     } else {
         RellLanguageServer(project)
@@ -31,21 +33,38 @@ override fun createConnectionProvider(project: Project): LanguageServerConnectio
 }
 ```
 
+It also supplies the language client (`RellLanguageClient`), the custom server interface
+(`RellServerApi`), and the client features (`RellLspClientFeatures`).
+
 **Why Two Modes?**
 - **Subprocess mode (`RellLanguageServer`):** Production use. Plugin controls server lifecycle.
-- **Socket mode (`RellSocketLanguageServer`):** Development. External server runs on port 5008, plugin connects to it. Useful for debugging server with IDE.
+- **Socket mode (`RellSocketLanguageServer`):** Development. External server runs on port 5008, plugin connects to it. Useful for debugging server with IDE. Enabled by `-Drell.lsp.useSocket=true`, which `./gradlew runIde -PuseSocket` passes.
+
+Older supported Rell versions get their own factories — see
+[Version compatibility](#3-version-compatibility-chromia).
 
 ### RellLanguageServer.kt
 
-**Role:** Launches embedded LSP server JAR as subprocess.
-
+**Role:** Launches an LSP server runtime as a subprocess, with `<lib dir>/*` on the classpath and
+`net.postchain.rell.toolbox.lsp.StdioMainKt` as the main class. The lib dir is a constructor
+parameter: it defaults to the bundled one, and the versioned factories pass a downloaded one.
 
 **Design Decision - JVM Heap Size:**
-- Uses `JVMHeapSizeManager.determineMaxHeapSize()` to calculate heap
+- Uses `JvmHeapSizeManager.determineMaxHeapSizeMB()` to calculate heap, defaulting to 2048 MB
 - **Why:** Large Rell projects can have many files. Generous heap prevents OutOfMemoryError during indexing.
 
-**Where Is the LSP JAR?**
-- JAR file gets downloaded by running `./get-lsp.sh` script and placed in `language-server/rell-toolbox-language-server-<RELL_VERSION>.jar`
+**Other launch flags:** `-Dlog4j2.configurationFile` pointing at the bundled
+`log4j2-override.properties` — the log4j2 config inside the server jar wires a Sentry appender into
+the root logger, which would upload every logged error without asking. On JDK 23+,
+`--sun-misc-unsafe-memory-access=allow` silences a per-launch deprecation warning.
+
+**Initialization options:** the `indexCaching` setting and the IDE's inlay-hint settings.
+
+**Where Is the LSP Runtime?**
+- The bundled one is resolved by Gradle from the `rell` version in `gradle/libs.versions.toml` and
+  copied into `<plugin dir>/language-server/` by `prepareSandbox`. No manual download step.
+- Runtimes for older supported versions live in `<IDE system dir>/rell-lsp/<version>/`, downloaded on
+  demand (see `RellLspRuntimeManager`).
 
 ### RellServerApi.kt
 
@@ -57,42 +76,44 @@ override fun createConnectionProvider(project: Project): LanguageServerConnectio
 |-------------------------|------------------------------------------------|----------------------|
 | `rell/invalidateCaches` | Clears server's workspace index cache          | `Boolean`            |
 | `rell/listTestFiles`    | Returns all Rell test files in workspace       | `List<RellTestFile>` |
+| `rell/getTestFile`      | Returns the test file at a URI, if it is one   | `RellTestFile?`      |
 | `rell/listTestCases`    | Returns test cases in a specific test file     | `List<RellTestCase>` |
 | `rell/addToProject`     | Adds Rell feature template to existing project | `Void`               |
 
 **Why Custom Methods?**
 Standard LSP doesn't cover IDE-specific features like test discovery or project templates. These extensions allow the plugin to provide richer functionality.
 
-
 ### RellLanguageClient.kt
 
-**Role:** Extends `IndexAwareLanguageClient` to handle server-to-client notifications.
+**Role:** Extends `IndexAwareLanguageClient` so LSP work participates in the IDE's indexing/dumb-mode
+machinery rather than running while the index is unavailable.
 
-**Why `IndexAwareLanguageClient`?**
-- Base class provides workspace indexing support
-- Allows LSP to query plugin about workspace files
-- Needed for multi-root workspace support
+### RellLspClientFeatures.kt
+
+**Role:** Tunes LSP4IJ's per-feature behavior. It keeps the server alive when no Rell file is open,
+disables the document-color feature (the Rell server never provides colors, and LSP4IJ would
+otherwise queue a `textDocument/documentColor` request on every highlighting pass), and resolves file
+URIs from disk so a rename reports the new URI.
 
 ### RellSemanticTokensColorProvider.kt
 
-**Role:** Maps LSP semantic token types to IDE color attributes.
+**Role:** Maps LSP semantic token types — and Rell's custom token modifiers — to IDE color attributes.
 
 **Example Mappings:**
 ```kotlin
-"namespace" → RellColors.NAMESPACE
-"class" → RellColors.ENTITY_TYPE
-"function" → RellColors.FUNCTION_CALL
-"keyword" → DefaultLanguageHighlighterColors.KEYWORD
+SemanticTokenTypes.Namespace -> RellColor.NAMESPACE_NAME
+SemanticTokenTypes.Struct    -> RellColor.STRUCT_NAME
+SemanticTokenTypes.Class     -> RellColor.ENTITY_NAME  // with the "rell-entity" modifier
+SemanticTokenTypes.Function  -> RellColor.QUERY_NAME   // with the "rell-query" modifier
 ```
 
-**Why Needed:** LSP semantic tokens are standardized strings. 
+The `RellTokenModifier` enum lists the server's Rell-specific modifiers (`rell-entity`,
+`rell-object`, `rell-query`, `rell-operation`, `rell-local_val`, …), which is how one LSP token type
+splits into several IDE colors. Unmapped types fall through to LSP4IJ's default provider.
+
+**Why Needed:** LSP semantic tokens are standardized strings.
 IDE needs to map them to actual TextAttributesKey objects for rendering.
 [More details](https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#textDocument_semanticTokens)
-
-**How It Works:**
-1. LSP sends semantic tokens: `[(line, col, length, tokenType, modifiers), ...]`
-2. Provider converts token type to `TextAttributesKey`
-3. IDE applies color scheme to those attributes
 
 ---
 
@@ -136,11 +157,17 @@ override fun getIcon() = RellIcons.FILE
 
 The adaptor's `lexer`/`parser` packages (tag 0.2.0) are **vendored** under `src/main/java/org/antlr/intellij/adaptor/` — 0.2.0 was never published to Maven, and only those two self-contained packages are needed (PSI nodes use the platform's `ASTWrapperPsiElement`). They depend only on `antlr4-runtime`, pinned to the same version as the generator.
 
+### Editor behavior built on the PSI
+
+`RellSyntaxHighlighter` (lexer-level coloring), `RellAdvancedSyntaxHighlightingAnnotator`,
+`RellFoldingBuilder`, `RellPairedBraceMatcher`, `RellCommenter`, `RellQuoteTokenHandler` and
+`RellSpellcheckingStrategy` all navigate the generated rule/token indices rather than hard-coded IDs.
+
 ### Grammar Update Process
 
 **Why Updates?** Rell language evolves (new keywords, syntax changes). The plugin must stay synchronized.
 
-**Process (from `docs/update_grammar.md`):** bump the `rell` version — the build extracts the matching `Rell.g4` and regenerates the parser/lexer automatically (no vendored grammar, no manual BNF/JFlex steps). Verify with `RellAntlrGrammarTest` and a `runIde` smoke test.
+**Process (from [update_grammar.md](update_grammar.md)):** bump the `rell` version — the build extracts the matching `Rell.g4` and regenerates the parser/lexer automatically (no vendored grammar, no manual BNF/JFlex steps). Verify with `RellAntlrGrammarTest` and a `runIde` smoke test.
 
 ### Lexer/Parser Numeric Validation
 
@@ -148,7 +175,79 @@ The adaptor's `lexer`/`parser` packages (tag 0.2.0) are **vendored** under `src/
 
 ---
 
-## 3. Test Runner
+## 3. Version Compatibility (`chromia/`)
+
+**Purpose:** Run the Rell toolchain that matches each project's declared `compile.rellVersion`
+instead of assuming the newest. The user-facing rules live in [COMPATIBILITY.md](COMPATIBILITY.md);
+this section maps them to classes.
+
+### RellVersionRegistry.kt
+
+**Role:** The versions this plugin build supports, read from the build-generated resource
+`rell/supported-versions.txt` (written by the `generateRellVersionRegistry` task from
+`supportedRellVersions` in `build.gradle.kts`). Exposes `floor` (the oldest, below which nothing
+runs) and `max` (the newest, which is bundled and is the default when nothing is declared).
+
+### RellVersionResolver.kt
+
+**Role:** Project service resolving a file's Rell version from the nearest enclosing `chromia.yml`.
+
+The walk stops at the project content roots, mirroring how the language server anchors an index root
+at each `chromia.yml` directory. Parsing goes through `ChromiaModelProvider` from
+`rell-toolbox-common` — the toolchain's own parser — so `.yml`-only, blank-is-absent and
+swallowed parse failures behave exactly as they do in `chr`. Results are cached per config path and
+dropped when the file changes.
+
+`RellVersionResolution` is the outcome: `Supported` (declared, or defaulted with an `Origin`
+explaining why), `Clamped` (declared newer than this build knows), or `Unsupported` (below the
+floor — no toolchain at all).
+
+### RellLspRouting.kt
+
+**Role:** Document matchers that decide which LSP4IJ `<server>` claims a file.
+`RellNewestVersionDocumentMatcher` takes everything resolving to the newest version;
+`RellVersionedDocumentMatcher` subclasses (e.g. `Rell0160DocumentMatcher`) take one specific older
+version, triggering the runtime download and declining until it is ready. Files below the floor match
+nothing. `RellLspServers` derives the server ids that `plugin.xml` must declare — `RellLspRoutingTest`
+fails if the two drift.
+
+### RellVersionedLanguageServerFactory.kt
+
+**Role:** Same factory as `RellLanguageServerFactory` but pointed at a downloaded runtime directory.
+One concrete subclass per older supported version (`Rell0160LanguageServerFactory`).
+
+### RellLspRuntimeManager.kt / RellLspLockfile.kt
+
+**Role:** Downloads and validates the older runtimes. The build writes
+`rell/lsp-lockfiles/<version>.lock` (GAV, file name, SHA-256) for each older version; the manager
+fetches exactly those artifacts into `<IDE system dir>/rell-lsp/<version>/`, verifies checksums, and
+writes a `.complete` marker containing the lockfile contents — so a plugin upgrade that re-pins the
+same Rell version to different artifacts invalidates the cache. Failures show a notification with a
+Retry action; a wrong-version server is never substituted.
+
+### VersionedRellParsers.kt / RellVersionSyntaxAnnotator.kt
+
+**Role:** Version-true syntax errors. The build generates an ANTLR parser from each older version's
+own `Rell.g4` into a version-suffixed package; `VersionedRellParsers` holds the entry points, and the
+external annotator runs the right one and reports "Not valid in Rell X.Y.Z (declared in chromia.yml)".
+The editor PSI always uses the newest grammar (a superset), so this is the only client-side place
+where "valid in the newest Rell but not in this project's Rell" surfaces.
+
+### RellVersionEditorNotificationProvider.kt
+
+**Role:** The two banners — an error banner below the floor, with a one-click "Set rellVersion to …"
+fix, and a warning banner when the declared version is newer than the plugin knows.
+
+### ChromiaConfigChangeListener.kt / ChromiaConfigReloadNotificationProvider.kt
+
+**Role:** Keeping resolution live. The VFS listener drops resolver caches on any `chromia.yml`
+change, restarts highlighting, refreshes banners and restarts the Rell language servers. The
+notification provider adds a save-and-reload bar on a `chromia.yml` whose edited `rellVersion` is
+still unsaved.
+
+---
+
+## 4. Test Runner
 
 **Purpose:** Integrate Rell tests with IDE test runner UI.
 
@@ -166,21 +265,30 @@ The adaptor's `lexer`/`parser` packages (tag 0.2.0) are **vendored** under `src/
 
 **Options (via `RellTestRunConfigurationOptions`):**
 
-| Field              | Type        | Purpose                                                       |
-|--------------------|-------------|---------------------------------------------------------------|
-| `testScope`        | `TestScope` | What to run: MODULE, BLOCKCHAIN, TEST_PATTERN, ALL_IN_PROJECT |
-| `moduleName`       | `String?`   | Module name (for MODULE scope)                                |
-| `testPattern`      | `String?`   | Regex pattern (for TEST_PATTERN scope)                        |
-| `executablePath`   | `String?`   | Path to `chr` CLI executable                                  |
-| `workingDirectory` | `String?`   | Directory to run tests from                                   |
+| Field                 | Type        | Purpose                                                       |
+|-----------------------|-------------|---------------------------------------------------------------|
+| `testScope`           | `TestScope` | What to run: MODULE, BLOCKCHAIN, TEST_PATTERN, ALL_IN_PROJECT |
+| `testModule`          | `String?`   | Module name (for MODULE scope)                                |
+| `testBlockchain`      | `String?`   | Blockchain name (for BLOCKCHAIN scope)                        |
+| `testPattern`         | `String?`   | Test name pattern (for TEST_PATTERN scope)                    |
+| `chrExecutable`       | `String?`   | Per-run override of the Chromia CLI command                   |
+| `workingDirectory`    | `String?`   | Directory to run tests from                                   |
+| `additionalArguments` | `String?`   | Extra arguments appended to the `chr test` command            |
 
-**Validation:** `checkConfiguration()` ensures required fields are set for selected scope.
+**Validation:** `checkConfiguration()` ensures the field the selected scope needs is filled in.
 
 ### RellTestRunProfileState.kt
 
-**Role:** Executes test command and captures results.
+**Role:** Builds the command, runs it, and wires the output into the test runner.
 
-**Output Format:** Chromia CLI outputs JSON with test results. Listener parses this and converts to Service Messages protocol (TeamCity format) that IDE understands.
+The command is `chr test` plus the scope flag (`--modules`, `--blockchain` or `--tests`; nothing for
+ALL_IN_PROJECT), the configured extra arguments, and `--hide-lib-warnings` unless already present. It
+is executed through the system shell by `RellPluginSettingsState.buildChromiaCliCommandLine`, so a
+`docker run …` command works as well as a plain path.
+
+**Results:** the IDE's SM test runner consumes TeamCity service messages from the process output.
+`RellTestResultsListener` adds a node for the run itself, so a non-zero exit surfaces as a failure
+even when the CLI emitted no per-test messages.
 
 **Service Messages Example:**
 ```
@@ -194,15 +302,16 @@ The adaptor's `lexer`/`parser` packages (tag 0.2.0) are **vendored** under `src/
 **Role:** Shows green "Run Test" icons in editor gutter.
 
 **Logic:**
-1. Analyze PSI tree for test functions (functions in test modules)
-2. If element is a test function, return `LineMarkerInfo` with run icon
-3. Clicking icon creates `RellTestRunConfiguration` and executes it
+1. Ask `RellProjectService` whether the containing file is a test file (an `rell/getTestFile` result)
+2. If the element is a test function, return `LineMarkerInfo` with run icon
+3. Clicking the icon creates a `RellTestRunConfiguration` and executes it
 
-**Performance:** Only analyzes visible code (gutter icons update as you scroll).
+`RellTestLocator` maps test names reported by the CLI back to source elements, so clicking a result
+in the test tree navigates to the test. `RellTestFinder` backs the platform's "Go to Test" action.
 
 ---
 
-## 4. Chromia Tool Window
+## 5. Chromia Tool Window
 
 **Purpose:** Sidebar panel showing Rell project structure (similar to Maven/Gradle tool windows).
 
@@ -210,108 +319,114 @@ The adaptor's `lexer`/`parser` packages (tag 0.2.0) are **vendored** under `src/
 
 **Role:** Creates tool window on IDE startup.
 
-**Configuration:**
 ```xml
 <toolWindow id="Chromia"
+            anchor="right"
             factoryClass="...ChromiaToolWindowFactory"
-            icon="ChromiaIcons.LOGO_13"
-            anchor="right" />
+            icon="/icons/chromia-big.png"/>
 ```
+
+`isApplicableAsync` hides the tool window entirely in projects where no Chromia project was found.
 
 **`DumbAware` Interface:** Allows tool window to function during IDE indexing (when "dumb mode" is active).
 
 ### ChromiaProjectDiscovery.kt
 
-**Role:** Finds Rell projects in workspace.
+**Role:** Finds Chromia projects in the workspace by walking the project base path (up to 10 levels
+deep, skipping `build`, `node_modules`, dot-directories and similar) and recording every directory
+that contains a `chromia.yml`.
 
-**Detection Logic:**
-- Searches for `chromia.yml` files (Chromia project configuration)
-- Each `chromia.yml` represents a Rell project
-- Parses YAML to extract project metadata
-
-**Why YAML Parsing:** Chromia projects use `chromia.yml` to define modules, dependencies, and blockchain configuration. Tool window displays this structure.
+Only `chromia.yml` counts — the Rell toolchain never reads `chromia.yaml`. Discovery records the
+file's location; it does not parse the YAML (version resolution does that, through the toolchain
+parser — see `RellVersionResolver`).
 
 ### ChromiaTreeModel.kt
 
-**Role:** Tree data model for displaying project hierarchy.
-
+**Role:** Tree data model for displaying project hierarchy, with `ChromiaTreeCellRenderer`,
+`ChromiaTreeMouseListener` and `ChromiaTreePopupMenu` providing presentation and interaction.
 
 ### ChromiaCommandExecutor.kt
 
-**Role:** Executes Chromia CLI commands from tool window UI.
+**Role:** Executes Chromia CLI commands from tool window UI (`chr build`, `chr test`, …).
 
-**Example Commands:**
-- `chr build` - Build project
-- `chr test` - Run tests
-
-**Execution:** Uses `GeneralCommandLine` similar to test runner.
+Each command runs as its own process in a Run tool window tab with stop and rerun actions, using the
+CLI command configured in settings.
 
 ---
 
-## 5. Code Formatting
+## 6. Code Formatting
 
-**Purpose:** Integrate LSP-based formatting with IDE's "Reformat Code" action.
+**Purpose:** Make "Reformat Code" work on `.rell` files.
 
-### RellFormattingModelBuilder.kt
+Formatting itself is served by LSP4IJ: its `formattingService` extension turns the action into a
+`textDocument/formatting` (or `rangeFormatting`) request against whichever Rell server owns the file.
+The plugin contributes no formatting model of its own.
 
-**Role:** Creates formatting model by building block structure.
+What the plugin does contribute is the Rell page under Settings → Editor → Code Style
+(`RellCodeStyleSettingsProvider`, `RellLanguageCodeStyleSettingsProvider`): indent options and a Rell
+code sample. `RellEnterHandler` handles newline behavior inside blocks.
 
-**Why Needed:** IDE's formatter expects a block-based model (nested blocks with indentation rules). LSP returns formatted text. This bridges the two approaches.
-
-**Approach:**
-1. When user invokes "Reformat Code", IDE calls `createModel()`
-2. Builder sends `textDocument/formatting` request to LSP
-3. LSP returns formatted text
-4. Builder creates `RellFormattingBlock` tree representing document structure
-5. IDE applies formatting
-
-**Configuration:**
-- `.rellformat` file in project root (parsed by LSP server, not plugin)
-- Settings: `max_line_width`, `insert_spaces`, `tab_size`
-
+> `RellFormattingModelBuilder` / `RellFormattingBlock` and `KeywordCompletionContributor` exist in
+> the source tree but are not registered in `plugin.xml`, so they are not part of any code path.
 
 ---
 
-## 6. Settings
+## 7. Settings
 
 ### RellPluginSettingsState.kt
 
-**Role:** Persistent storage for plugin settings.
+**Role:** Persistent storage for plugin settings, plus the logic that turns them into a command line.
 
 **Stored Settings:**
 
-| Field                 | Type      | Default | Purpose                        |
-|-----------------------|-----------|---------|--------------------------------|
-| `indexCachingEnabled` | `Boolean` | `true`  | Enable workspace index caching |
-| `chrExecutablePath`   | `String?` | `null`  | Path to Chromia CLI executable |
+| Field                   | Type      | Default | Purpose                                                  |
+|-------------------------|-----------|---------|----------------------------------------------------------|
+| `indexCaching`          | `Boolean` | `true`  | Enable workspace index caching (sent to the LSP server)   |
+| `chromiaCliCommand`     | `String`  | `""`    | Chromia CLI path *or* full shell command; blank = auto    |
+| `chromiaCliExecutable`  | `String`  | `""`    | Legacy field, migrated into `chromiaCliCommand` on load   |
 
 **Storage Location:** `<IDE_CONFIG>/options/RellPluginSettings.xml`
 
-**Why Persistent:** Settings survive IDE restart.
+The command is always run through the system shell (`sh -c` / `cmd /c`), which is what makes a
+`docker run … chr` command usable in place of a path. When blank, well-known install locations are
+probed, then `chr` on `PATH`.
 
-### RellPluginSettingsConfigurable.kt
+### RellPluginSettingsConfigurable.kt / RellPluginSettingsComponent.kt
 
 **Role:** UI page in Settings → Tools → Rell.
 
 **UI Elements:**
-- Checkbox: "Enable index caching"
-- Text field: "Chromia CLI executable path" (with file chooser button)
-
-**Validation:** Validates `chrExecutablePath` points to valid executable.
+- Checkbox: "Enable/disable caching of Rell project index. (Restart required)"
+- Text field: "Chromia CLI" (path or shell command) with a file chooser and a **Test** button that
+  runs `<command> --version` and reports the result
+- A "Use Docker image for CLI" link, shown only when Docker is on `PATH`
 
 ---
 
-## 7. Actions
+## 8. Actions
 
 ### RellInvalidateCacheAction.kt
 
-**Role:** Clears LSP server's workspace index cache.
+**Role:** Sends `rell/invalidateCaches` to the running server and reports the outcome as a
+notification.
 
-**Keyboard Shortcut:** `Ctrl+Alt+I` (configurable)
+**Keyboard Shortcut:** `Ctrl+Alt+I`
+
+### RellAddToProjectAction.kt
+
+**Role:** Sends `rell/addToProject`, adding Rell feature scaffolding to the current project.
+
+**Keyboard Shortcut:** `Ctrl+Shift+F11`
+
+### RunRellTestAction.kt
+
+**Role:** "Run Rell Test" in the project view and editor popup menus.
+
+**Keyboard Shortcut:** `Ctrl+Shift+F10`
 
 ### RellCreateFileAction.kt
 
-**Role:** Creates new Rell file from template.
+**Role:** Creates new Rell file from template, offering the kinds below in the New… dialog.
 
 **Templates (in `src/main/resources/fileTemplates/internal/`):**
 - `Rell File.rell` - Empty file
@@ -320,21 +435,14 @@ The adaptor's `lexer`/`parser` packages (tag 0.2.0) are **vendored** under `src/
 - `Rell Enum.rell` - Enum template
 - `Rell Object.rell` - Object template
 
-
 ---
 
-## 8. Services
+## 9. Services
 
 ### RellProjectService.kt
 
-**Role:** Project-scoped service providing cached LSP data.
-
-**Cached Data:**
-
-| Cache            | TTL      | Purpose                               |
-|------------------|----------|---------------------------------------|
-| `testFilesCache` | 1 second | Caches result of `rell/listTestFiles` |
-| `testCasesCache` | 1 second | Caches result of `rell/listTestCases` |
+**Role:** Project-scoped service wrapping `rell/getTestFile` with a short-lived cache
+(`TimedCache`, 1 second TTL, keyed by file URI).
 
 **Why 1 Second TTL?**
 - Balance between responsiveness and LSP call reduction
